force-app/main/default/objects/inspire1__Time_Entry__c/inspire1__Time_Entry__c.object-meta.xml
<CustomObject>
    <description>Inspire Planner - This object captures time logged via Time Tracker.</description>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TE-{000000}</displayFormat>
        <label>Time Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>