force-app/main/default/objects/inspire1__Time_Entry__c/fields/inspire1__Contact__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact that time entry belongs to.  Logged from external project portal.</description>
    <inlineHelpText>Contact that time entry belongs to.  Logged from external project portal.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>