force-app/main/default/objects/inspire1__Time_Entry__c/fields/inspire1__Date__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Date__c</fullName>
    <description>Defines date of work entered.</description>
    <label>Work Date</label>
    <type>Date</type>
</CustomField>