force-app/main/default/objects/inspire1__Time_Entry__c/fields/inspire1__Efforts__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Efforts__c</fullName>
    <description>Number of hours for time entry.</description>
    <label>Time Spent</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>