force-app/main/default/objects/inspire1__Time_Entry__c/fields/inspire1__Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Entry_Date__c</fullName>
    <description>No longer used.</description>
    <label>(Deprecated)</label>
    <type>DateTime</type>
</CustomField>