force-app/main/default/objects/inspire1__Time_Entry__c/fields/inspire1__Entry_Type__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Entry_Type__c</fullName>
    <description>Captures name of related object for time entry.</description>
    <label>Entry Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>