force-app/main/default/objects/inspire1__Time_Entry__c/fields/inspire1__Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Resource_Name__c</fullName>
    <description>Name of resource time entry belongs to.  Determines between user vs contact.</description>
    <formula>IF(ISBLANK( inspire1__Contact__c ),  Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName,  inspire1__Contact__r.FirstName &amp; &quot; &quot; &amp; inspire1__Contact__r.LastName)</formula>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>