force-app/main/default/objects/inspire1__Time_Entry__c/fields/inspire1__sysFlagForCalc__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysFlagForCalc__c</fullName>
    <description>Identifies if the record should be included in next rollup execution.</description>
    <formula>IF( AND(NOT(ISBLANK( inspire1__Tracked_Project_Tasks__c )),( inspire1__Entry_Type__c = &quot;Task&quot;),( inspire1__Tracked_Project_Tasks__r.inspire1__Actual_Effort__c &lt; inspire1__Efforts__c)),
TRUE,
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sysFlagForCalc</label>
    <type>Checkbox</type>
</CustomField>