force-app/main/default/objects/inspire1__Time_Entry__c/fields/inspire1__Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Task_Subject__c</fullName>
    <description>Captures subject of task.</description>
    <label>Task Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>