force-app/main/default/objects/inspire1__Time_Entry__c/fields/inspire1__Timesheet__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Timesheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to related Timesheet the Time Entry belongs to.</description>
    <label>Timesheet</label>
    <referenceTo>inspire1__Timesheet__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>