force-app/main/default/objects/inspire1__Time_Entry__c/fields/inspire1__Tracked_Project_Tasks__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Tracked_Project_Tasks__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related project task for time entry.</description>
    <label>Project Task</label>
    <referenceTo>inspire1__Project_Tasks__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Tracked_Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>