force-app/main/default/objects/inspire1__Time_Entry__c/fields/inspire1__Tracked_Task__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Tracked_Task__c</fullName>
    <description>Salesforce record ID the time entry is associated to.</description>
    <label>Salesforce Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>