force-app/main/default/objects/inspire1__Time_Entry__c/fields/inspire1__Work_Date_End__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Work_Date_End__c</fullName>
    <description>Defines end time of work entered.</description>
    <label>Work Date End</label>
    <type>DateTime</type>
</CustomField>