force-app/main/default/objects/inspire1__Time_Entry__c/fields/inspire1__Work_Date_Start__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Work_Date_Start__c</fullName>
    <description>Defines start time of work entered.</description>
    <label>Work Date Start</label>
    <type>DateTime</type>
</CustomField>