force-app/main/default/objects/inspire1__Time_Entry__c/fields/inspire1__Work_Description__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Work_Description__c</fullName>
    <description>Captures the description of the work entered.</description>
    <label>Work Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>